# sf-permits-mcp

./: .bandit  .env.example  .gitignore  BLACKBOX_PROTOCOL.md  CHANGELOG-csrf-audit.md  CHANGELOG-qs4-a.md  CHANGELOG-qs4-b.md  CHANGELOG-qs4-c.md  CHANGELOG-qs4-d.md  CHANGELOG-qs5-a.md  CHANGELOG-qs5-b.md  CHANGELOG-qs5-c.md  CHANGELOG-qs5-d.md  CHANGELOG-qs8-t1-a.md  CHANGELOG-qs8-t1-b.md  CHANGELOG-qs8-t1-c.md  CHANGELOG-qs8-t1-d.md  CHANGELOG-qs8-t2-a.md  CHANGELOG-qs8-t2-b.md  CHANGELOG-qs8-t2-c.md  CHANGELOG-qs8-t2-d.md  CHANGELOG-qs8-t3-a.md  CHANGELOG-qs8-t3-b.md  CHANGELOG-qs8-t3-c.md  CHANGELOG-qs8-t3-d.md  CHANGELOG-sprint-74-1.md  CHANGELOG-sprint-74-2.md  CHANGELOG-sprint-74-3.md  CHANGELOG-sprint-74-4.md  CHANGELOG-sprint-75-1.md  CHANGELOG-sprint-75-2.md  CHANGELOG-sprint-75-3.md  CHANGELOG-sprint-75-4.md  CHANGELOG-sprint-76-1.md  CHANGELOG-sprint-76-2.md  CHANGELOG-sprint-76-3.md  CHANGELOG-sprint-76-4.md  CHANGELOG-sprint-77-1.md  CHANGELOG-sprint-77-2.md  CHANGELOG-sprint-77-3.md  (+127 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: RESULTS.md  raw_results.csv
claude-project-upload/: CUSTOM_INSTRUCTIONS.md  STATUS.md
datasets/: CATALOG.md  catalog.json
docs/: ADDENDA_DATA_EXPLORATION.md  ARCHITECTURE.md  BACKUPS.md  DECISIONS.md  DESIGN_CANON.md  DESIGN_COMPONENT_LOG.md  DESIGN_FEEDBACK_LOG.md  DESIGN_MIGRATION.md  DESIGN_PRINCIPALS.md  DESIGN_TOKENS.md  DIRECTORY_SUBMISSION.md  LAUNCH_QA_PLAN.md  MCP_TESTING.md  ONBOARDING.md  PHASE2_PROMPT.md  SCALING.md  SPEC-analysis-history-phases-d-f.md  TIMELINE_ESTIMATION.md  charis-invite.md  contact-data-report.md  cron-endpoints.md  dforge-public-readme.md  high-risk-validation-report.md  linkedin-update.md  mcp-demo-transcripts.md  mehri-reference.md  model-release-probes.md  portfolio-brief.md  v5-design-session-prompt.md
qa-drop/: brief-token-migration-qa.md  design-token-migration-results-content-qa.md  index-dashboard-rebuild-qa.md  landing-page-qa.md  nav-error-pages-qa.md  portfolio-index-migration-qa.md  qs10-t2-session.md  qs11-t1-session.md  qs11-t3-session.md  qs12-t1-session.md  qs13-1a-honeypot-qa.md  qs13-t3-docs-legal-qa.md  qs14-qa.md  qs3-a-permit-prep-qa.md  qs3-b-ops-hardening-qa.md  qs3-d-analytics-qa.md  qs4-a-metrics-qa.md  qs4-b-performance-qa.md  qs4-b-qa-runner.py  qs4-c-obsidian-qa.md  qs4-d-security-qa.md  qs5-a-parcels-qa.md  qs5-b-backfill-qa.md  qs5-c-bridges-qa.md  qs5-d-hygiene-qa.md  report-intel-rebuild-qa.md  report-token-migration-qa.md  s45-permit-lookup-accuracy-qa.md  (+35 more)
(+906 files in other folders)
